# litellm_ext

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  sitecustomize.py
config/: extensions.yaml  litellm.yaml
litellm_ext/: __init__.py  bootstrap.py
litellm_ext/adapters/: __init__.py  anthropic_openai.py
litellm_ext/agent_config/: __init__.py  adapters.py  cli.py  engine.py
litellm_ext/core/: __init__.py  config.py  logging.py  model_alias.py  patch.py  registry.py
litellm_ext/extensions/: __init__.py  suppress_warnings.py
litellm_ext/extensions/asgi/: hard_caps_messages.py  proxy_patch_registry.py  (+4 more)
litellm_ext/policy/: __init__.py  engine.py  settings.py  text.py
scripts/: reason_replay.py  reasoning_cache_probe.py
tests/: __init__.py  conftest.py  test_agent_config_apply_cli.py  test_anthropic_openai_adapter.py  test_asgi_utils_edge_cases.py  test_autocompact_tuning_edge_cases.py  test_compact_routing.py  test_config_additional_edge_cases.py  test_count_tokens_edge_cases.py  test_hard_caps_edge_cases.py  test_hard_caps_messages_middleware_integration.py  test_httpx_registry_edge_cases.py  test_install_idempotency.py  test_local_token_counter_edge_cases.py  test_message_start_usage.py  test_message_start_usage_rewriter.py  test_model_alias.py  test_model_mapping.py  test_policy_additional_edge_cases.py  test_policy_cjk_and_budget_edge_cases.py  test_policy_multiplier_not_double_applied.py  test_reasoning_replay_edge_cases.py  test_sse_usage_rewrite.py  test_stream_usage_rewrite_middleware_integration.py  test_streaming_sse_edge_cases.py  test_suppress_warnings_edge_cases.py  test_tool_sanitization_edge_cases.py  test_transform_streaming.py
(+4 files in other folders)
