[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-ext"
version = "0.1.0"
description = "LiteLLM Extension - Proxy layer for big model access"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "LiteLLM Ext Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "litellm[proxy]>=1.81.15",
    "prisma>=0.15.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fastapi>=0.104.0",
    "starlette>=0.27.0",
    "requests>=2.31.0",
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
litellm-ext = "litellm_ext.bootstrap:install_extensions"
agent-config-apply = "litellm_ext.agent_config.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fastapi>=0.104.0",
    "starlette>=0.27.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
